[tool.poetry]
name = "streamlit-tutorial"
version = "0.1.0"
description = ""
authors = ["Tomoaki Nakamura <tyo_yo@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.72.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
